kubernetes/infrastructure/routing/httproute-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: poseidon
      namespace: envoy-gateway-system
      sectionName: https-lan-wildcard
  hostnames:
    - alertmanager.poseidon.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
