kubernetes/infrastructure/routing/httproute-grafana.yaml
---
# The grafana subchart bundled with kube-prometheus-stack does not yet
# support Gateway API routes, so the HTTPRoute is managed here instead.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: poseidon
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - grafana.barrelmaker.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
