kubernetes/infrastructure/routing/httproute-longhorn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: longhorn-system
spec:
  parentRefs:
    - name: poseidon
      namespace: envoy-gateway-system
      sectionName: https-lan-wildcard
  hostnames:
    - longhorn.poseidon.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
