kubernetes/infrastructure/routing/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: poseidon
      namespace: envoy-gateway-system
      sectionName: https-lan-wildcard
  hostnames:
    - prometheus.poseidon.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
